# sieve-bench-harness

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  constants.py
bench/contamination/: __init__.py  bloom.py  normalize.py
bench/data/semantic-hard-v1/: README.md  go.jsonl  python.jsonl  rust.jsonl  typescript.jsonl
bench/diagnostics/: __init__.py  retriever_health.py
bench/loaders/: __init__.py  base.py  coir.py  cosqa_plus.py  go.py  livecodebench.py  rust.py  semantic_hard.py  stack_v2_synthetic.py  swebench_live.py  typescript.py
bench/metrics/: __init__.py  performance.py  retrieval.py
bench/report/: __init__.py  generate_report.py
bench/report/templates/: full_csv.py  hero_table.md.j2  interactive_html.html.j2
bench/retrievers/: __init__.py  _pylate_base.py  base.py  bge_small.py  bm25.py  codebert.py  custom_encoder.py  lateon_code.py  lateon_code_edge.py  ripgrep.py  sieve.py  unixcoder.py
bench/runners/: run_benchmark.py
tests/: test_bloom.py  test_loader_coir.py  test_loader_go.py  test_loader_rust.py  test_loader_semantic_hard.py  test_loader_typescript.py  test_metrics.py  test_normalize.py  test_performance_metrics.py  test_report_phase_b.py  test_retriever_bm25.py  test_retriever_custom_encoder.py  test_retriever_lateon.py  test_retriever_ripgrep.py  test_retriever_sieve.py  test_retriever_sieve_e2e.py  test_retriever_transformers.py  test_retriever_unixcoder.py  test_runner.py
